<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sebastianruiz.punto4.Punto4"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">



              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/Usuario"
                  android:textSize="20sp"
                  android:layout_marginTop="36dp"
                  android:id="@+id/textView2"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentStart="true" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/Password"
                  android:textSize="20sp"
                  android:layout_marginTop="25dp"
                  android:id="@+id/textView"
                  android:layout_below="@+id/textView2"
                  android:layout_alignParentStart="true" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tRepetirContrasena"
                  android:layout_marginTop="30dp"
                  android:textSize="20sp"
                  android:text="@string/tRepetirContrasena"
                  android:layout_below="@+id/textView"
                  android:layout_alignParentStart="true"
                  android:layout_alignEnd="@+id/textView" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/tCorreo"
                  android:id="@+id/tCorreo"
                  android:layout_marginTop="25dp"
                  android:textSize="20sp"
                  android:layout_below="@+id/eRepetirContrasena"
                  android:layout_alignParentStart="true" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/tNacimiento"
                  android:id="@+id/tNacimiento"
                  android:textSize="20sp"
                  android:layout_centerVertical="true"
                  android:layout_toStartOf="@+id/eRepetirContrasena" />

              <EditText
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:inputType="textEmailAddress"
                  android:ems="9"
                  android:id="@+id/eCorreo"
                  android:layout_alignBottom="@+id/tCorreo"
                  android:layout_alignStart="@+id/eRepetirContrasena" />

              <EditText
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/eUsuario"
                  android:hint="@string/hintUsuario"
                  android:inputType="textEmailAddress"
                  android:layout_above="@+id/textView"
                  android:layout_alignStart="@+id/ePassword"
                  android:ems="9"/>

              <EditText
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ePassword"
                  android:hint="@string/hintPassword"
                  android:inputType="textPassword"
                  android:layout_alignBottom="@+id/textView"
                  android:layout_alignStart="@+id/eRepetirContrasena"
                  android:ems="9"/>

              <EditText
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:ems="9"
                  android:id="@+id/eRepetirContrasena"
                  android:layout_alignBottom="@+id/tRepetirContrasena"
                  android:layout_toEndOf="@+id/tRepetirContrasena"
                  android:layout_marginStart="29dp" />



              <Spinner
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/spinner"
                  android:layout_alignStart="@+id/eCorreo"
                  android:layout_alignBottom="@+id/tNacimiento"
                  android:spinnerMode="dropdown"
                  android:entries="@array/Ciudades"
                  android:prompt="@string/Ciudades_prompt"/>


          </RelativeLayout>

      </LinearLayout>

    </ScrollView>

</LinearLayout>
